Fix: list spacing so it’s betterer

--- a/templates/assets/scss/templates/_home.scss
+++ b/templates/assets/scss/templates/_home.scss
@@ -96,17 +96,7 @@
     @media screen and (max-width: $big-screen) {
       li {
         display: inline-flex;
-        margin-right: $spacer;
-
-        &:after {
-          content: '/';
-        }
-
-        &:last-of-type {
-          &:after {
-            content: '';
-          }
-        }
+        margin-right: $halfspacer;
       }
     }
 
